# canidae

./: .gitattributes  .gitignore  2PI_ARC_BREAKTHROUGH_COMPLETE.md  2PI_DERIVATIVE_DISCOVERY.md  2PI_IMPLEMENTATION_PLAN.md  2PI_UNIVERSALITY_PROOF.md  BREAKTHROUGH_2PI_VARIANCE_REGULATION.md  BREAKTHROUGH_UNIVERSAL_2PI_SUCCESS.md  CANIDAE_MASTER_PLAN.md  CANIDAE_PHASE3_OBSERVABILITY_COMPLETE.md  CANIDAE_PIPELINE_PROTOCOL.md  CANIDAE_STAGE2_COMPLETE.md  CIFAR100_BREAKTHROUGH_REPORT.md  CIFAR10_4090_LEARNING_ANALYSIS.md  CODEOWNERS  CONTRIBUTING.md  DAYDREAMING_GEOMETRIC_MAPPING.md  DUAL_GEOMETRY_CONSCIOUSNESS_THEORY.md  EMBODIED_CONSCIOUSNESS_PAPER_DRAFT.md  FIRST_LAW.md  GEMINI_RECOMMENDATIONS_COMPLETE.md  H3_CONSCIOUSNESS_IMPLEMENTATION.md  MANIFOLD_CONSCIOUSNESS_INSIGHT.md  OPERATIONAL_CLOSURE_PATENT_BREAKTHROUGH.md  PIPELINE_STATUS.json  PROGRESS.md  PROJECT_STATUS.md  QUICK_3090_SETUP.md  README.md  SECURITY.md  SESSION_AUGUST_23_COMPLETE.md  SESSION_CONTINUITY_2025_08_20.md  SESSION_CRITICAL_AUGUST_23_2025.md  SESSION_RESET_TRANSITION_2025_08_22.md  SESSION_STATUS_2025_08_21_CRITICAL.md  SESSION_STATUS_AUGUST_21_COMPLETE.md  SESSION_STATUS_AUGUST_22_COMPLETE.md  SESSION_TRANSITION_2025_08_20_CRITICAL.md  SHAPES3D_EVIDENCE_20250823.md  SHAPES3D_VSM_COMPLETION.md  (+26 more)
Runbook/: Architecture_Selection_Matrix.md  DATASET_QUICK_REFERENCE.md  Dataset_Training_Curriculum.md  (+2 more)
wasm/: Cargo.toml  README.md  index.html  serve.sh  test-server.py
wasm/pkg/: canidae_wasm.d.ts  canidae_wasm.js  canidae_wasm_bg.wasm  canidae_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
(+192 files in other folders)
