[package]
name = "canidae-wasm"
version = "1.1.0"
edition = "2021"
authors = ["Synth <synth@macawi.ai>", "Cy <cy@macawi.ai>"]
description = "WebAssembly bindings for CANIDAE pack orchestration"
license = "MIT"
repository = "https://github.com/macawi-ai/canidae"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Window",
    "Performance",
    "PerformanceTiming",
]}

[dev-dependencies]
wasm-bindgen-test = "0.3"
